[package]
name = "pallet-avn-proxy"
description = "Process proxy transactions with the ability to charge a fee"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
hex-literal = { version = "0.4.1", default-features = false }
scale-info.workspace = true

sp-core.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
sp-avn-common.workspace = true
frame-support.workspace = true
frame-system.workspace = true

# Optional imports for benchmarking
frame-benchmarking = { optional = true, workspace = true }

[dev-dependencies]
libsecp256k1 = { version = "0.7.0", default-features = false, features =["hmac","static-context"]}
hex = { workspace = true, default-features = true }
sp-io = { default-features = true, workspace = true }
sp-keystore = { default-features = true, workspace = true }
pallet-balances = { workspace = true, default-features = true }
pallet-scheduler.workspace = true
pallet-timestamp.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
pallet-nft-manager = { workspace = true, default-features = true }
pallet-token-manager = { workspace = true, default-features = true }
pallet-eth-bridge = { workspace = true, default-features = true }
pallet-avn = { workspace = true, default-features = true }
parking_lot = { version = "0.12.0" }
sp-avn-common = { workspace = true, default-features = true, features=["test-utils"] }

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"scale-info/std",
	"codec/std",
	"sp-std/std",
    "sp-core/std",
	"sp-runtime/std",
	"sp-avn-common/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
