[package]
name = "pallet-avn-transaction-payment"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log.workspace = true
codec.workspace = true
scale-info.workspace = true
hex-literal = { version = "0.4.1", default-features = false }

sp-avn-common.workspace = true
sp-core.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-transaction-payment.workspace = true

# Optional imports for benchmarking
frame-benchmarking = { optional = true, workspace = true }

[dev-dependencies]
sp-io = { default-features = true, workspace = true }
pallet-balances = { workspace = true, default-features = true }
sp-avn-common = { workspace = true, default-features = true, features=["test-utils"] }

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
    "sp-core/std",
	"sp-runtime/std",
	"sp-avn-common/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-transaction-payment/std",
	"log/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
