[package]
name = "pallet-avn"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
codec = { workspace = true, features = ["derive"] }
impl-trait-for-tuples = "0.2.2"
hex.workspace = true
scale-info.workspace = true
log.workspace = true


sp-std.workspace = true
sp-io.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true
sp-application-crypto.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
sp-avn-common.workspace = true
frame-benchmarking = { optional = true, workspace = true }

[dev-dependencies]
hex-literal = { version = "0.4.1", default-features = false }
parking_lot = { version = "0.12.0" }
pallet-timestamp = { default-features = true, workspace = true }
pallet-balances = { workspace = true, default-features = true }
sp-state-machine = { default-features = true, workspace = true }
sp-avn-common = { workspace = true, default-features = true, features=["test-utils"]}

[features]
migrate = []
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"serde/std",
	"scale-info/std",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-application-crypto/std",
	"frame-support/std",
	"frame-system/std",
	"sp-avn-common/std",
	"pallet-session/std",
	"hex/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
