[package]
name = "pallet-eth-bridge"
description = "Enables author communication with Ethereum"
license = "GPL-3.0"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
codec = { workspace = true, features = ["derive"] }
ethabi = { default-features = false, git = "https://github.com/Aventus-Network-Services/ethabi.git", branch = "v13.0.0-no-std-avn" }
hex = { workspace = true }
hex-literal = { version = "0.4.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
scale-info = { workspace = true }
log = { workspace = true }
serde = { workspace = true, optional = true }

sp-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
sp-staking = {default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
sp-avn-common =  { default-features = false, path = "../../primitives/avn-common", features = ["serde"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
pallet-session = {default-features = false, features = ["historical"], git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
pallet-avn = { default-features = false, path = "../avn" }

# Optional imports for benchmarking
frame-benchmarking = {  default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0", optional = true }

[dev-dependencies]
parking_lot = { version = "0.12.0" }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
sp-avn-common = { features=["test-utils"], path = "../../primitives/avn-common" }
alloy-sol-types = "1.1.2"
alloy-primitives = "1.1.2"

[features]
migrate = []
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"scale-info/std",
	"codec/std",
	"sp-api/std",
	"sp-std/std",
	"sp-core/std",
    "sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-application-crypto/std",
	"sp-avn-common/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-avn/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"serde/std",
	"hex/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]