[package]
name = "pallet-eth-bridge"
description = "Enables author communication with Ethereum"
license = "GPL-3.0"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
codec = { workspace = true, features = ["derive"] }
ethabi = { default-features = false, git = "https://github.com/Aventus-Network-Services/ethabi.git", branch = "v13.0.0-no-std-avn" }
hex.workspace = true
hex-literal = { version = "0.4.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
scale-info.workspace = true
log.workspace = true
serde = { workspace = true, optional = true }

sp-api.workspace = true
sp-std.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-staking.workspace = true
sp-application-crypto.workspace = true
sp-avn-common = { workspace = true, features=["serde"] }
frame-support.workspace = true
frame-system.workspace = true
pallet-timestamp.workspace = true
pallet-session = { workspace = true, features = ["historical"] }
pallet-avn.workspace = true

# Optional imports for benchmarking
frame-benchmarking = { optional = true, workspace = true }

[dev-dependencies]
parking_lot = { version = "0.12.0" }
sp-state-machine = { default-features = true, workspace = true }
sp-avn-common = { workspace = true, default-features = true, features=["test-utils"] }
alloy-sol-types = "1.1.2"
alloy-primitives = "1.1.2"

[features]
migrate = []
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"scale-info/std",
	"codec/std",
	"sp-api/std",
	"sp-std/std",
	"sp-core/std",
    "sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-application-crypto/std",
	"sp-avn-common/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-avn/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"serde/std",
	"hex/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [ "frame-support/try-runtime" ]