[package]
name = "pallet-ethereum-events"
description = "Process and handle ethereum events"
license = "GPL-3.0"

version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
codec = { workspace = true, features = ["derive"] }
hex-literal = { version = "0.4.1", default-features = false }
simple-json2 = { version = "0.1.2", default-features = false, git = 'https://github.com/Aventus-Network-Services/simple-json2', branch = "fixed_dependencies_1.10" }
hex.workspace = true
impl-trait-for-tuples = "0.2.2"
scale-info.workspace = true
log.workspace = true

sp-std.workspace = true
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-staking.workspace = true
sp-application-crypto.workspace = true
sp-avn-common.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-session.workspace = true
pallet-avn.workspace = true
serde = { features = ["derive"], workspace = true, optional = true }

# Optional imports for benchmarking
parking_lot = { version = "0.12.0", default-features = false}
frame-benchmarking = { optional = true, workspace = true }

[dev-dependencies]
pallet-timestamp = { default-features = true, workspace = true }
pallet-balances = { workspace = true, default-features = true }
sp-state-machine = { default-features = true, workspace = true }
pallet-avn-proxy = { workspace = true, default-features = true }
env_logger = "0.10.0"
sp-avn-common = { workspace = true, default-features = true, features=["test-utils"] }

[features]
migrate = []
default = ["std", "pallet-session/historical"]
std = [
	"frame-benchmarking?/std",
	"serde/std",
	"hex/std",
	"scale-info/std",
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-staking/std",
	"sp-application-crypto/std",
	"sp-avn-common/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-session/std",
	"pallet-avn/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
